src/App.css
/* ... */
.tour-detail-provider-link {
  font-weight: 500;
  font-size: 12px;
  line-height: 18px;
  color: #ffffff;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  /*max-width: 320px;*/
  max-width: 225px;
}

.tour-detail-conditional-desktop {
  display: none;
}

.tour-detail-img-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  margin: 2rem 0;
}

.tour-detail-img-container img {
  height: 300px;
  width: 400px;
  border-radius: 18px;
}

.tour-detail-itinerary-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  min-width: 0;
  gap: 24px;
}

.tour-detail-conditional-mobile {
  display: block;
}

.tour-detail-itinerary {
  padding: 0;
  min-width: 0;
}

.tour-detail-itinerary > div:nth-of-type(2) > div::before {
  display: none;
}

.tour-detail-itinerary > div:nth-of-type(2) > div > div > div {
  margin-top: 0;
  margin-bottom: auto;
}

.tour-detail-itinerary-header {
  font-weight: 700;
  font-size: 18px;
  line-height: 18px;
  text-align: left;
  color: #000000;
  margin-bottom: 25px;
}

.tour-detail-itinerary-calendar {
  width: 100%;
  background: #ffffff;
  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
  border-radius: 18px;
  display: inline-flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.tour-detail-itinerary-calendar-selected-day {
  font-weight: 700;
  font-size: 14px;
  line-height: 18px;
  text-align: center;
  color: var(--bzb-bahnblau);
  padding: 14px 0 0 0;
  width: 100%;
  height: 30px;
}

.tour-detail-itinerary-calendar-grid {
  display: grid;
  grid-template-columns: repeat(7, 46px);
  height: 85px;
  padding: 0 10px;
}

.tour-detail-itinerary-calendar-grid .tour-detail-itinerary-calendar-week-day {
  font-weight: 500;
  font-size: 13px;
  line-height: 18px;
  text-align: center;
  color: #8b8b8b;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.tour-detail-itinerary-calendar-grid .tour-detail-itinerary-calendar-week-end {
  font-weight: 700;
  font-size: 13px;
  line-height: 18px;
  text-align: center;
  color: #101010;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.tour-detail-itinerary-calendar-grid .tour-detail-itinerary-calendar-date {
  font-weight: 500;
  font-size: 13px;
  line-height: 18px;
  text-align: center;
  color: #101010;
  height: 46px;
  width: 46px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.tour-detail-itinerary-calendar-grid
  .tour-detail-itinerary-calendar-grid-selected {
  position: relative;
  font-weight: 700;
  font-size: 13px;
  line-height: 18px;
  text-align: center;
  color: #ffffff;
  height: 46px;
  width: 46px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  z-index: 1;
}

.tour-detail-itinerary-calendar-grid
  .tour-detail-itinerary-calendar-grid-selected::before {
  content: "";
  position: absolute;
  top: 2px;
  left: 2px;
  background: var(--bzb-bahnblau);
  border-radius: 50%;
  height: 41px;
  width: 41px;
  z-index: -1;
}

@media only screen and (max-width: 600px) {
  .tour-detail-itinerary {
    max-width: 300px;
  }
  .tour-detail-itinerary-calendar {
    max-width: 400px;
  }
  .tour-detail-itinerary-calendar-grid {
    grid-template-columns: repeat(7, 38px);
    height: 85px;
    padding: 10px 10px;
  }
}

.tour-detail-action-btns-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 8px;
  margin: 1rem 0;
}

.tour-detail-action-btns-container .tour-detail-action-btns {
  border-radius: 12px;
  border: none;
  background-color: var(--bzb-akelei);
  color: #ffffff;
  font-size: 14px;
  font-weight: 600;
  padding: 6px 20px;
  height: auto;

  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  transition: background-color 0.2s ease;
}

.tour-detail-action-btns-container .tour-detail-action-btns:hover {
  background-color: var(--bzb-bahnblau);
}

@media only screen and (max-width: 1024px) {
  .tour-detail-img-container img {
    width: 325px;
    height: auto;
  }
}

@media only screen and (min-width: 1025px) {
  .tour-detail-header {
    padding: 2rem 0;
    text-align: left;
  }

  .tour-detail-img-container {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin: 2rem 0;
  }

  .tour-detail-action-btns-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    max-width: 400px;
  }

  .tour-detail-action-btns-container .tour-detail-action-btns {
    max-width: 400px;
    width: 400px;
  }

  .tour-detail-map-container {
    width: 100%;
    height: 100%;
  }

  .tour-detail-provider-link {
    max-width: 320px;
  }

  .tour-detail-itinerary-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
    height: 100%;
  }
}

.static-container {
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
}

.static-container h5 {
  text-align: left;
  padding-bottom: 15px;
  line-height: 16px;
  color: #000000;
}

.order-container > div {
  flex: 1;
}

ul.about-bullets {
  padding-left: 16px;
}

.about-bullets li {
  background: transparent;
  color: #8b8b8b;
  text-align: left;
  margin-top: 5px;
}

.react-horizontal-scrolling-menu--wrapper {
  position: relative;
}

.react-horizontal-scrolling-card {
  width: auto;
  /* margin-right: 20px; */
  vertical-align: top;
  height: 98%;
}

.react-horizontal-scrolling-arrow-container {
  display: block;
}

@media only screen and (max-width: 600px) {
  .react-horizontal-scrolling-arrow-container {
    display: none;
  }
  .react-horizontal-scrolling-card {
    max-width: 100%;
  }
}
/* ... */

